# slopecd

./: .gitignore  .gitmodules  Makefile  README.md  slopecd.bib  slopecd.tex
code/: Makefile  debug.py  pyproject.toml  setup.cfg  setup.py  slopecd-code  slurm_path_real.sh  slurm_path_real_worker.sh  slurm_path_simulated.sh  slurm_path_simulated_worker.sh  toy.py
code/expes/: adaptive-hybrid.py  admm.py  bcTCGA_rslope_glmnet.R  bcTCGA_slopecd.py  cluster-updates-real.py  cluster-updates.py  cv.py  glmnet-slope-comp.R  gradsplit-old.py  hybrid-line-search.py  illustration_2D_slope.py  improved-sparse.py  intercept.py  ista_vs_fista.py  max-time.py  newt-alm-new.py  newt-alm.py  oracle_cd.py  path.py  path_real.py  path_simulated.py  pgd_freq_benchmark.py  reductions.py  slope-cd.py  slope-dirder-cd.py  slope-gradsplit-cd.py  slope-thresholding.py  test_pgd_freq.py  test_strategy.py  threshold-bug.py  toy.py
code/expes/Rhee2006/: benchopt_run_2022-08-19_09h03m03.csv  plot.py
code/expes/old/: admm.py  cluster-updates-real.py  cluster-updates.py  ista_vs_fista.py
code/expes/real/: Rhee2006.parquet  bcTCGA.parquet  (+4 more)
code/figures/: cd-stuck.py  directional-derivative.py  figspec.py  illustration_2D_slope.py  partial_slope.py  slope-thresholding.py
code/results/: bcTCGA_slopecd.txt  benchopt_run_2022-09-28_16h25m50.csv
code/slope/: __init__.py  benchmark_utils.py  cd_utils.py  clusters.py  cv.py  data.py  path.py  path_utils.py  permutation.py  plot_utils.py  solvers.py  sorted_l1_norm.py  utils.py
code/tests/: test-permutations.py  test_perumation.py  tests.py
(+119 files in other folders)
