[metadata]
name = slope
version = 0.1.0
description = Coordinate Descent Algorithms for SLOPE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = slope
install_requires =
    requests
    importlib-metadata
    benchopt
    numba
    numpy >= 1.12
    scikit-learn >= 1.0
    scipy

[flake8]
max-line-length = 88
exclude = expes, build
extend-ignore = 
    E203
    W503
    W504
    E226

