[metadata]
name = slope
version = 0.1.0
description = Coordinate Descent Algorithms for SLOPE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    appdirs
    requests
    importlib-metadata
    pyprojroot
    benchopt
    libsvmdata
    rpy2
    numba
    numpy >= 1.12
    scikit-learn >= 1.0
    scipy

[flake8]
max-line-length = 88
exclude = expes, build
extend-ignore = 
    E203
    W503
    W504
    E226
